unpackaged/main/default/objects/UniqueEntry__Matching_Criteria__c/UniqueEntry__Matching_Criteria__c.object-meta.xml
<CustomObject>
    <label>Matching Criteria</label>
    <nameField>
        <label>Matching Criteria Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Matching Criteria</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>