unpackaged/main/default/objects/UniqueEntry__Matching_Criteria__c/fields/UniqueEntry__Configuration__c.field-meta.xml
<CustomField>
    <fullName>UniqueEntry__Configuration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RingLead Configuration</label>
    <referenceTo>UniqueEntry__RingLead_Configuration__c</referenceTo>
    <relationshipLabel>Matching Criterias</relationshipLabel>
    <relationshipName>Matching_Criterias</relationshipName>
    <type>Lookup</type>
</CustomField>