unpackaged/main/default/objects/UniqueEntry__Matching_Criteria__c/fields/UniqueEntry__Field_Name__c.field-meta.xml
<CustomField>
    <fullName>UniqueEntry__Field_Name__c</fullName>
    <label>Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>