unpackaged/main/default/objects/UniqueEntry__Matching_Criteria__c/fields/UniqueEntry__Field_Value__c.field-meta.xml
<CustomField>
    <fullName>UniqueEntry__Field_Value__c</fullName>
    <label>Field Value</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>