unpackaged/main/default/objects/UniqueEntry__Matching_Criteria__c/fields/UniqueEntry__Filter_Type_2__c.field-meta.xml
<CustomField>
    <fullName>UniqueEntry__Filter_Type_2__c</fullName>
    <label>Filter Type 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>