unpackaged/main/default/objects/UniqueEntry__Matching_Criteria__c/fields/UniqueEntry__Filter_Type__c.field-meta.xml
<CustomField>
    <fullName>UniqueEntry__Filter_Type__c</fullName>
    <label>Filter Type</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>