unpackaged/main/default/objects/UniqueEntry__Matching_Criteria__c/fields/UniqueEntry__Operator__c.field-meta.xml
<CustomField>
    <fullName>UniqueEntry__Operator__c</fullName>
    <label>Operator</label>
    <length>100</length>
    <type>Text</type>
</CustomField>