unpackaged/main/default/objects/UniqueEntry__Matching_Criteria__c/fields/UniqueEntry__RingLead_Last_Processed_Date__c.field-meta.xml
<CustomField>
    <fullName>UniqueEntry__RingLead_Last_Processed_Date__c</fullName>
    <description>Date time Field created by Ringlead</description>
    <label>Last Processed Date</label>
    <type>DateTime</type>
</CustomField>