unpackaged/main/default/objects/UniqueEntry__Matching_Criteria__c/listViews/UniqueEntry__All.listView-meta.xml
<ListView>
    <fullName>UniqueEntry__All</fullName>
    <columns>NAME</columns>
    <columns>UniqueEntry__Order__c</columns>
    <columns>UniqueEntry__Operator__c</columns>
    <columns>UniqueEntry__Filter_Type_2__c</columns>
    <columns>UniqueEntry__Filter_Type__c</columns>
    <columns>UniqueEntry__Filter_Value_2__c</columns>
    <columns>UniqueEntry__Field_Value__c</columns>
    <columns>UniqueEntry__Field_Name__c</columns>
    <columns>UniqueEntry__Configuration__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>