unpackaged/main/default/objects/UniqueEntry__Matching_Criteria__c/listViews/UniqueEntry__All1.listView-meta.xml
<ListView>
    <fullName>UniqueEntry__All1</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>